[gd_scene load_steps=7 format=3 uid="uid://dxvqdifsxtr1h"]

[ext_resource type="Script" uid="uid://du23v82cdps36" path="res://addons/nodetunnel/demo/node_tunnel_demo.gd" id="1_pe4km"]
[ext_resource type="Script" uid="uid://c6cuqomu1um57" path="res://Scripts/ui.gd" id="3_0fxgd"]
[ext_resource type="PackedScene" uid="uid://ddghhujpyfx8f" path="res://Scene/map.tscn" id="3_p1dnn"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_pe4km"]
sky_top_color = Color(0.79645187, 0.46494347, 0.24903977, 1)
sky_horizon_color = Color(0.82640964, 0.7357825, 0.6728066, 1)
ground_horizon_color = Color(0.82640964, 0.7357825, 0.6728066, 1)

[sub_resource type="Sky" id="Sky_jvpx1"]
sky_material = SubResource("ProceduralSkyMaterial_pe4km")

[sub_resource type="Environment" id="Environment_p1dnn"]
background_mode = 2
sky = SubResource("Sky_jvpx1")
tonemap_mode = 2
glow_enabled = true
fog_mode = 1
fog_density = 1.0
adjustment_enabled = true
adjustment_brightness = 0.5
adjustment_saturation = 1.2

[node name="NodeTunnelDemo" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
script = ExtResource("1_pe4km")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
light_color = Color(0.9783209, 0.44439447, 0.3967181, 1)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_p1dnn")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://bb3qcv0kbqbo6")
spawn_path = NodePath("..")

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
follow_viewport_enabled = true
script = ExtResource("3_0fxgd")

[node name="Control" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="UI/Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 128.0
offset_right = 219.0
offset_bottom = 183.0
disabled = true
action_mode = 0
text = "Host"

[node name="HSeparator" type="HSeparator" parent="UI/Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 187.0
offset_right = 405.0
offset_bottom = 195.0

[node name="HostID" type="LineEdit" parent="UI/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 195.0
offset_right = 405.0
offset_bottom = 226.0
placeholder_text = "Host ID"

[node name="Join" type="Button" parent="UI/Control"]
layout_mode = 0
offset_left = 250.0
offset_top = 128.0
offset_right = 405.0
offset_bottom = 183.0
disabled = true
text = "Join"

[node name="IDLabel" type="Label" parent="UI/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 219.0
offset_top = 264.0
offset_right = 563.0
offset_bottom = 306.0
text = "Your ID: ABCD1234"

[node name="Copy" type="Button" parent="UI/Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 247.0
offset_right = 201.0
offset_bottom = 303.0
text = "Copy ID"

[node name="ExitButton" type="Button" parent="UI/Control"]
layout_mode = 0
offset_left = 770.0
offset_top = 458.0
offset_right = 949.0
offset_bottom = 528.0
text = "Quit Game"

[node name="LeaveRoom" type="Button" parent="UI/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 321.0
offset_right = 236.0
offset_bottom = 373.0
text = "Main Manu"

[node name="LanButton" type="Button" parent="UI/Control"]
visible = false
layout_mode = 0
offset_left = 867.0
offset_top = 10.0
offset_right = 951.0
offset_bottom = 41.0
text = "Lan Mode"

[node name="Map" parent="." instance=ExtResource("3_p1dnn")]

[connection signal="pressed" from="UI/Control/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Control/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="UI/Control/Copy" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/Control/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="UI/Control/LeaveRoom" to="." method="_on_leave_room_pressed"]
[connection signal="pressed" from="UI/Control/LanButton" to="." method="_on_lan_button_pressed"]
